task-86405-fixed footer social alignment issue

--- a/scss/frontend/layout/_footer.scss
+++ b/scss/frontend/layout/_footer.scss
@@ -360,9 +360,9 @@
 
 .footer_social-links{
     li{
-     
         a{
             display: flex;
+            align-items: center;
             img{
                 opacity: 1;
                 width: 24px;
